# Homework_10.1

./: pyproject.toml
src/: README.md  main.py  processing.py
