[tool.poetry]
name = "homework-10-1"
version = "0.1.0"
description = ""
authors = ["Ekaterina <ekaterina.kuz@gmail.com>"]
readme = "README.md"
packages = [{include = "homework_10"}]

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.lint.dependencies]
flake8 = "^7.1.1"
black = "^24.10.0"
mypy = "^1.14.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
